--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,505 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* utility css */
+.icon {
+  width: 20px;
+  height: 20px;
+}
+.active {
+  border-bottom: 2px solid black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn {
+  display: inline-block;
+  padding: 20px;
+  border: 1px solid white;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 20px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+  font-family: "Poppins", sans-serif;
+  filter: contrast(80%);
+  padding: 1px;
+  transition: transform 0.3s ease;
+  box-shadow: 0px 1px 2px 0px rgba(0, 255, 255, 0.7),
+    1px 2px 4px 0px rgba(0, 255, 255, 0.7),
+    2px 4px 8px 0px rgba(0, 255, 255, 0.7),
+    2px 4px 16px 0px rgba(0, 255, 255, 0.7);
+}
+
+.btn:hover {
+  filter: contrast(100%);
+  cursor: pointer;
+  transform: translateY(5px);
+  box-shadow: inset 0px 10px 20px 2px rgba(0, 255, 255, 0.7);
+}
+
+.btn--gradient {
+  background: linear-gradient(30deg, #9ed8db 40%, #007b82 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* app styles */
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  box-sizing: border-box;
+  background-color: #000000;
+  font-family: "Roboto", sans-serif;
+  color: white;
+}
+
+/* App component layout */
+.App {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+.App__header-container {
+  width: 100vw;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.App__main-container {
+  width: 100%;
+  height: calc(100vh - 40px);
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+.App__sidebar-container {
+  width: 12%;
+  height: 100%;
+}
+
+.App__content-container {
+  width: 88%;
+  height: calc(100vh - 40px);
+  padding: 20px;
+}
+
+/* header */
+.header {
+  color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.header__logo {
+  letter-spacing: 2px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 2rem;
+  padding: 20px;
+  filter: contrast(70%);
+}
+.header__logo:hover {
+  background: linear-gradient(30deg, #9ed8db 40%, #007b82 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  cursor: pointer;
+}
+.header__menu {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  justify-content: flex-end;
+  margin-right: 20px;
+}
+.header__menu-item {
+  list-style: none;
+  margin-left: 10px;
+}
+.header__menu-link {
+  text-decoration: none;
+}
+
+.header__icon {
+  width: 20px;
+  height: 20px;
+}
+
+.header__icon-image {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s ease;
+}
+
+.header__icon:hover .header__icon-image {
+  transform: scale(1.2);
+}
+
+.header__contact {
+  letter-spacing: 2px;
+  filter: contrast(70%);
+  font-family: "Open Sans", sans-serif;
+}
+.header__contact:hover {
+  filter: contrast(100%);
+  cursor: pointer;
+}
+
+/* sidebar component */
+
+.sidebar-container {
+  width: 12vw;
+  height: 100%;
+}
+.sidebar {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.sidebar__menu {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 100px 10px 0 10px;
+  gap: 40px;
+}
+
+.sidebar__menu a {
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+  font-family: "Poppins", sans-serif;
+  filter: contrast(80%);
+  padding: 1px;
+  transition: transform 0.3s ease;
+}
+.sidebar__menu a:hover {
+  filter: contrast(100%);
+}
+.sidebar__menu-link-icon {
+  margin-right: 10px;
+}
+.sidebar__menu-link {
+  padding: 10px;
+}
+.sidebar__menu-link:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+.link {
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+  font-family: "Poppins", sans-serif;
+  filter: contrast(40%);
+  padding: 1px;
+  transition: transform 0.3s ease;
+}
+.link:hover {
+  background: linear-gradient(30deg, #9ed8db 40%, #007b82 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+/* home component/landing page */
+.home {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.home__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border: 0;
+}
+.home__typewriter-overlay-heading-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  padding-top: 10px;
+}
+.home__typewriter-overlay-heading {
+  font-size: 3.8rem;
+  letter-spacing: 4px;
+  font-family: "Inter", sans-serif;
+  text-align: center;
+  line-height: 1.2;
+  filter: contrast(60%);
+  max-width: 60%;
+}
+
+/* about component */
+.about {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.about__content-container {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  height: 100%;
+  width: 100%;
+}
+.about__content-button-container {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  height: 20%;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 50px;
+  align-items: center;
+  animation: slideInFromBottom 1s ease;
+}
+
+.about__content-figure {
+  flex: 1;
+  height: 500px;
+  border: none;
+  animation: slideInFromRight 1s ease;
+}
+
+.about__content-figure-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border: none;
+}
+.about__content-text {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  letter-spacing: 1px;
+  line-height: 1.5;
+  text-align: center;
+  color: white;
+  margin: 2px auto;
+  padding: 0 40px;
+  filter: contrast(50%);
+  animation: slideInFromLeft 1s ease;
+}
+
+/* portfolio component */
+.portfolio {
+  width: 100%;
+  height: 100%;
+  background-color: #73a9ad;
+  background-image: linear-gradient(to bottom right, #73a9ad, #000);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  overflow: scroll;
+  position: relative;
+}
+
+.portfolio__header {
+  width: 100%;
+  height: 30px;
+  position: fixed;
+}
+
+.portfolio__menu {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.portfolio__menu-item {
+  list-style: none;
+  margin-left: 10px;
+}
+
+.portfolio__menu-btn {
+  border: 0;
+  background-color: transparent;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+  font-family: "Poppins", sans-serif;
+  filter: contrast(70%);
+  padding: 1px;
+  transition: transform 0.3s ease;
+}
+
+.portfolio__menu-btn:hover {
+  filter: contrast(100%);
+  cursor: pointer;
+  transform: scale(1);
+}
+
+/* skill component */
+.skill {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  animation: slideInFromBottom 1s ease;
+  padding: 50px;
+}
+.skill__card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  animation: slideInFromBottom 1s ease;
+}
+.skill__card {
+  width: 200px;
+  height: 300px;
+  border-radius: 20px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transition: box-shadow 0.3s ease;
+  animation: slideInFromTop 1s ease;
+  overflow: hidden;
+}
+
+.skill__card:hover {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 64px 55px,
+    rgba(0, 0, 0, 0.16) 0px -14px 30px, rgba(0, 0, 0, 0.12) 0px 6px 6px,
+    rgba(0, 0, 0, 0.19) 0px 16px 13px, rgba(0, 0, 0, 0.12) 0px -5px 5px;
+}
+
+.skill__name {
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+  color: white;
+  filter: contrast(50%);
+  padding: 1px;
+}
+
+/* skill pagination */
+.pagination {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  padding: 10px;
+}
+
+.pagination__link {
+  display: inline-block;
+  padding: 4px 16px;
+  background-color: #e0e0e0;
+  color: #333;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.pagination:hover {
+  cursor: pointer;
+}
+
+.pagination__link--disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.pagination__link--active {
+  color: #4caf50;
+}
+
+/* animations */
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
