--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,42 @@
+/* preloader */
+.preloader {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 6000;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.preloader__gif-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.preloader__loader-gif {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  border: none;
+  border-radius: 50%;
+}
+
 /* utility css */
+.images {
+  width: 30px;
+  height: 30px;
+}
 .icon {
   width: 20px;
   height: 20px;
@@ -299,6 +337,7 @@ body {
   object-fit: cover;
   object-position: center;
   border: none;
+  border-radius: 50%;
 }
 .about__content-text {
   flex: 1;
@@ -464,17 +503,11 @@ body {
   color: #4caf50;
 }
 
-/* experirnce */
+/* experience */
+
 .experience {
+  padding-top: 90px;
   width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
-  animation: slideInFromBottom 1s ease;
-  padding-top: 80px;
 }
 
 /* project */
@@ -482,12 +515,55 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  flex-direction: row;
   gap: 20px;
   justify-content: center;
   align-items: center;
-  animation: slideInFromBottom 1s ease;
-  padding-top: 80px;
+  padding: 80px;
+}
+
+.project__card {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  position: relative;
+  animation: bounceInFromRight 1s ease;
+}
+
+.project__card-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border: none;
+  border-radius: 50%;
+}
+
+.project__card-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+}
+
+.project__card-overlay-card-image {
+  width: 40px;
+  height: 40px;
+  transform: translateX(-200px);
+  transition: transform 0.3s ease;
+}
+
+.project__card-overlay:hover .project__card-overlay-card-image {
+  transform: translateX(0);
 }
 
 /* animations */
@@ -536,5 +612,75 @@ body {
   }
   100% {
     opacity: 0;
+  }
+}
+
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  80% {
+    transform: scale(0.95);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes bounceInFromLeft {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  60% {
+    transform: translateX(20%);
+    opacity: 1;
+  }
+  80% {
+    transform: translateX(-10%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes bounceInFromRight {
+  0% {
+    transform: translate3d(100%, 0, 0) rotate(0deg);
+  }
+  25% {
+    transform: translate3d(100%, -50px, 0) rotate(90deg);
+  }
+  50% {
+    transform: translate3d(100%, 0, 0) rotate(180deg);
+  }
+  75% {
+    transform: translate3d(100%, -50px, 0) rotate(270deg);
+  }
+  100% {
+    transform: translate3d(100%, 0, 0) rotate(360deg);
+  }
+}
+
+@keyframes zigzagAnimation {
+  0% {
+    transform: translateX(0) translateY(0);
+  }
+  25% {
+    transform: translateX(-10px) translateY(10px);
+  }
+  50% {
+    transform: translateX(10px) translateY(-10px);
+  }
+  75% {
+    transform: translateX(-10px) translateY(10px);
+  }
+  100% {
+    transform: translateX(0) translateY(0);
   }
 }
