--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,24 @@
   border-bottom: 2px solid black;
 }
 
+.hide {
+  display: none;
+  visibility: hidden;
+}
+.show {
+  display: flex;
+  visibility: visible;
+}
+.show-block {
+  display: block;
+  visibility: visible;
+}
+
+.background-color {
+  background-color: #73a9ad;
+  background-image: linear-gradient(to bottom right, #73a9ad, #000);
+}
+
 .btn {
   display: inline-block;
   padding: 20px;
@@ -126,6 +144,24 @@ body {
   padding: 20px;
 }
 
+/* media query for the App__content-container */
+@media screen and (max-width: 768px) {
+  .App__content-container {
+    width: 100%;
+    height: calc(100vh - 50px);
+  }
+
+  .App__sidebar-container {
+    width: none;
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+}
+
 /* header */
 .head {
   color: white;
@@ -189,6 +225,45 @@ body {
 .header__contact:hover {
   filter: contrast(100%);
   cursor: pointer;
+}
+.burger-menu {
+  display: none;
+}
+/* media queries for the header */
+@media screen and (max-width: 768px) {
+  .head {
+    background-color: #f5f0bb;
+    background-image: linear-gradient(to bottom right, #f5f0bb, #fff);
+    height: 50px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header__menu {
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  .header__logo {
+    font-size: 2.5rem;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    font-weight: 600;
+    color: #000;
+  }
+  .burger-menu-container {
+    width: 35px;
+    height: 30px;
+    margin-right: 20px;
+  }
+  .burger-menu {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
 }
 
 /* sidebar component */
@@ -258,6 +333,29 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+/* media query for side bar */
+@media screen and (max-width: 768px) {
+  .sidebar-container {
+    width: none;
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  .sidebar {
+    width: none;
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+}
+
 /* home component/landing page */
 .home {
   position: relative;
@@ -297,6 +395,20 @@ body {
   max-width: 60%;
 }
 
+/* media query for home */
+@media screen and (max-width: 768px) {
+  .home__typewriter-overlay-heading {
+    font-size: 3.5rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    font-family: "Inter", sans-serif;
+    text-align: center;
+    line-height: 1.2;
+    filter: contrast(65%);
+    max-width: 90%;
+  }
+}
+
 /* about component */
 .about {
   width: 100%;
@@ -313,9 +425,10 @@ body {
   width: 100%;
 }
 .about__content-button-container {
+  width: 100%;
   display: flex;
   flex-direction: row;
-  gap: 50px;
+  gap: 15px;
   height: 20%;
   padding-left: 40px;
   padding-right: 40px;
@@ -354,8 +467,68 @@ body {
   color: white;
   margin: 2px auto;
   padding: 0 40px;
-  filter: contrast(50%);
+  filter: contrast(80%);
   animation: slideInFromLeft 1s ease;
+}
+/* about page media query */
+@media screen and (max-width: 768px) {
+  .about {
+    padding-top: 20px;
+  }
+  .about__content-container {
+    flex-direction: column;
+  }
+  .about__content-text {
+    font-size: 1rem;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    max-width: 90%;
+  }
+  .about__content-button-container {
+    justify-content: center;
+  }
+  .about-btn {
+    display: inline-block;
+    color: white;
+    border: 1px solid white;
+    padding: 4px;
+    text-align: center;
+    width: 200px;
+    border-radius: 10px;
+    box-shadow: inset 0px 5px 10px 2px rgba(0, 255, 255, 0.3);
+  }
+  .about-btn:hover {
+    filter: contrast(100%);
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+}
+/* portfolio headers */
+.skill__heading {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+.project__heading {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+.experience__heading {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
 }
 
 /* portfolio component */
@@ -412,6 +585,41 @@ body {
   filter: contrast(100%);
   cursor: pointer;
   transform: scale(1);
+}
+
+/* media queries for the portfolio */
+@media screen and (max-width: 768px) {
+  .portfolio__header {
+    position: static;
+  }
+
+  .portfolio__menu,
+  .portfolio__menu-item,
+  .portfolio__menu-btn {
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  .porfolio__heading {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+    position: static;
+    top: auto;
+    left: auto;
+  }
+  .experience__heading {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+    position: static;
+    top: auto;
+    left: auto;
+  }
 }
 
 /* skill component */
@@ -503,11 +711,84 @@ body {
   color: #4caf50;
 }
 
+/* media query for skill */
+@media screen and (max-width: 768px) {
+  .skill__card-container {
+    animation: none;
+    padding-top: 30px;
+  }
+  .skill__card {
+    width: 200px;
+    height: 210px;
+    border-radius: 20px;
+    padding: 60px;
+  }
+  .skill__heading {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+    position: static;
+    top: auto;
+    left: auto;
+  }
+  .pagination__link {
+    display: inline-block;
+    padding: 1px 5px;
+  }
+}
+
 /* experience */
 
 .experience {
   padding-top: 90px;
   width: 100%;
+}
+.experience .role-cont {
+  padding: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .experience {
+    padding-top: 0;
+    width: 100%;
+  }
+  .experience article {
+    padding-top: 3px;
+  }
+  .experience p {
+    padding: 3px;
+    font-size: 0.8rem;
+    padding-block: 10px;
+  }
+  .experience h1 {
+    padding: 3px;
+    font-size: 2rem;
+  }
+  .experience h2 {
+    padding: 3px;
+    font-size: 0.8rem;
+    font-weight: 500;
+  }
+  .experience li {
+    padding: 3px;
+    font-size: 1rem;
+  }
+  .experience a {
+    padding: 3px;
+    font-size: 0.6rem;
+    text-decoration: underline;
+  }
+  .experience img {
+    width: 104px;
+    height: 80px;
+    border-radius: 50%;
+  }
+  .experience .image-decription-cont {
+    padding: 5px;
+  }
+  .experience .role-cont {
+    padding: 5px;
+  }
 }
 
 /* project */
@@ -564,6 +845,101 @@ body {
 
 .project__card-overlay:hover .project__card-overlay-card-image {
   transform: translateX(0);
+}
+
+@media screen and (max-width: 768px) {
+  .project {
+    padding: 6px;
+  }
+  .project__heading {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+    position: static;
+    top: auto;
+    left: auto;
+  }
+}
+
+/* Navigation menu for responsiveness feature */
+.navbar {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+  width: 100vw;
+  height: 100vh;
+  background-color: #f5f0bb;
+  background-image: linear-gradient(to bottom right, #f5f0bb, #fff);
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+  color: black;
+  z-index: 1000;
+  animation: slideInFromRight 1s ease;
+}
+.navbar__menu {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar__menu-link {
+  text-decoration: none;
+  color: black;
+  padding: 1px;
+  transition: transform 0.3s ease;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    visibility: visible;
+    opacity: 1;
+    position: relative;
+    top: auto;
+    left: auto;
+  }
+  .navbar__logo {
+    position: absolute;
+    top: 0;
+    right: 4px;
+    padding: 19px;
+  }
+  .nav-link {
+    color: black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    gap: 10px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-family: "Poppins", sans-serif;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+  }
+  .navbar__icon {
+    display: inline-flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-right: 20px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
 }
 
 /* animations */
