--- a/src/components/ContactMe.css
+++ b/src/components/ContactMe.css
@@ -6,4 +6,18 @@
   background-color: #73a9ad;
   background-image: linear-gradient(to bottom right, #73a9ad, #000);
   font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-form {
+  margin-left: 120px;
+}
+
+@media screen and (max-width: 768px) {
+  .contact {
+    padding-top: 70px;
+  }
 }
