--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  position: relative;
   overflow: hidden;
 }
 .App__header-container {
@@ -859,55 +860,47 @@ body {
     top: auto;
     left: auto;
   }
+  .project__card {
+    animation: none;
+  }
 }
 
 /* Navigation menu for responsiveness feature */
-.navbar {
+
+.toggle-hide {
   display: none;
   visibility: hidden;
   opacity: 0;
   position: absolute;
   top: -9999px;
   left: -9999px;
-  width: 100vw;
-  height: 100vh;
-  background-color: #f5f0bb;
-  background-image: linear-gradient(to bottom right, #f5f0bb, #fff);
-  font-family: "Poppins", sans-serif;
-  font-size: 1rem;
-  font-weight: 500;
-  letter-spacing: 2px;
-  color: black;
-  z-index: 1000;
-  animation: slideInFromRight 1s ease;
-}
-.navbar__menu {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  align-items: center;
-  justify-content: center;
 }
 
-.navbar__menu-link {
-  text-decoration: none;
-  color: black;
-  padding: 1px;
-  transition: transform 0.3s ease;
+.toggle-show {
+  display: flex;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  visibility: visible;
 }
 
 @media screen and (max-width: 768px) {
   .navbar {
-    display: flex;
+    position: absolute;
+    z-index: 1000;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    visibility: visible;
-    opacity: 1;
-    position: relative;
-    top: auto;
-    left: auto;
+    width: 100vw;
+    height: 100vh;
+    background-color: #f5f0bb;
+    background-image: linear-gradient(to bottom right, #f5f0bb, #fff);
+    font-family: "Poppins", sans-serif;
+    font-size: 1rem;
+    font-weight: 500;
+    letter-spacing: 2px;
+    color: black;
+    animation: slideInFromRight 1s ease;
   }
   .navbar__logo {
     position: absolute;
@@ -915,8 +908,18 @@ body {
     right: 4px;
     padding: 19px;
   }
+  .navbar__menu {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+  }
   .nav-link {
     color: black;
+    text-decoration: none;
+    transition: transform 0.3s ease;
     display: flex;
     flex-direction: row;
     align-items: center;
