added more responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,7 @@ body {
   width: 88%;
   height: calc(100vh - 40px);
   padding: 20px;
+  overflow: scroll;
 }
 
 /* media query for the App__content-container */
@@ -172,6 +173,8 @@ body {
   flex-direction: row;
   align-items: center;
   padding-top: 10px;
+  position: relative;
+  z-index: 100;
 }
 .header__logo {
   letter-spacing: 2px;
@@ -238,6 +241,8 @@ body {
     height: 50px;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    z-index: 100;
   }
 
   .header__menu {
@@ -625,40 +630,43 @@ body {
 
 /* skill component */
 .skill {
+  margin-top: 50px;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
   justify-content: center;
   align-items: center;
-  animation: slideInFromBottom 1s ease;
 }
 .skill__card-container {
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 20px;
   justify-content: center;
   align-items: center;
-  animation: slideInFromBottom 1s ease;
-  padding-top: 100px;
+  padding-top: 80px;
+}
+.skill__card-carousel {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 70px;
+  padding: 15px 100px;
 }
 .skill__card {
-  width: 300px;
-  height: 330px;
+  width: 280px;
+  height: 350px;
   border-radius: 20px;
   padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  margin-left: 10px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   transition: box-shadow 0.3s ease;
-  animation: slideInFromTop 1s ease;
   overflow: hidden;
 }
 
@@ -676,40 +684,6 @@ body {
   color: white;
   filter: contrast(50%);
   padding: 1px;
-}
-
-/* skill pagination */
-.pagination {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 20px;
-  padding: 10px;
-}
-
-.pagination__link {
-  display: inline-block;
-  padding: 4px 16px;
-  background-color: #e0e0e0;
-  color: #333;
-  font-weight: bold;
-  text-decoration: none;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
-}
-
-.pagination:hover {
-  cursor: pointer;
-}
-
-.pagination__link--disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-.pagination__link--active {
-  color: #4caf50;
 }
 
 /* media query for skill */
@@ -794,25 +768,36 @@ body {
 
 /* project */
 .project {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 20px;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 80px;
+  margin-top: 20px;
 }
 
 .project__card {
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   position: relative;
-  animation: bounceInFromRight 1s ease;
+  margin-left: 20px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-
+.project__card-carousel {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 80px;
+  padding: 20px 80px;
+  align-items: center;
+  margin-top: 10px;
+}
 .project__card-image {
   width: 100%;
   height: 100%;
@@ -820,6 +805,11 @@ body {
   object-position: center;
   border: none;
   border-radius: 50%;
+  transition: transform 0.3s ease;
+}
+
+.project__card:hover .project__card-image {
+  transform: scale(1.05);
 }
 
 .project__card-overlay {
@@ -830,27 +820,50 @@ body {
   height: 100%;
   border-radius: 50%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.4);
-  overflow: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.project__card:hover .project__card-overlay {
+  opacity: 1;
+}
+
+.project__card-anchor-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .project__card-overlay-card-image {
   width: 40px;
   height: 40px;
-  transform: translateX(-200px);
+  transform: scale(0);
   transition: transform 0.3s ease;
 }
 
 .project__card-overlay:hover .project__card-overlay-card-image {
-  transform: translateX(0);
+  transform: scale(1);
 }
 
 @media screen and (max-width: 768px) {
   .project {
-    padding: 6px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project__card-carousel {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+    padding: 50px 30px;
+    align-items: center;
+    margin-top: 10px;
   }
   .project__heading {
     display: block;
