--- a/src/components/ContactMe.css
+++ b/src/components/ContactMe.css
@@ -3,21 +3,68 @@
 @tailwind utilities;
 
 .contact {
-  background-color: #73a9ad;
-  background-image: linear-gradient(to bottom right, #73a9ad, #000);
+  width: 100%;
   font-family: "Poppins", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  gap: 60px;
+  background-color: #73a9ad;
+  background-image: linear-gradient(to bottom right, #73a9ad, #000);
+  overflow: auto;
+  padding: 50px 0;
 }
 
-.contact-form {
-  margin-left: 120px;
+.contact h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  line-height: 1;
+  color: #fff;
+  max-width: 85%;
+  text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+.contact p {
+  font-size: 1.5rem;
+  font-weight: 200;
+  color: #fff;
+  width: 65%;
+  text-align: center;
+}
+
+.contact form button {
+  border: 1px solid white;
+  width: 200px;
+  margin-top: 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.contact form button:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+.contact form {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
   .contact {
-    padding-top: 70px;
+    padding: 100px 0;
+    overflow: scroll;
+    height: none;
+  }
+  .contact h2 {
+    font-size: 3.5rem;
+    max-width: 100%;
+  }
+  .contact p {
+    font-size: 2rem;
+    max-width: 100%;
+  }
+  .contact form {
+    width: 50%;
   }
 }
